--- a/liftAPP/pom.xml
+++ b/liftAPP/pom.xml
@@ -17,16 +17,38 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
+	<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-data-mongodb</artifactId>
+    	<version>3.2.4</version>
+	</dependency>
+ 	<!--<dependency>
+       	<groupId>org.springframework.boot</groupId>
+       	<artifactId>spring-boot-starter-web</artifactId>
+    	<versionId>2.2.2.RELEASE</versionId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        <versionId>2.2.2.RELEASE</versionId>
+    </dependency>
+	--><!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
+	<dependency>
+    	<groupId>org.mongodb</groupId>
+    	<artifactId>mongodb-driver-sync</artifactId>
+    	<version>5.0.1</version>
+	</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
